LatexMathParser/antlr/LatexMathParser.js
// Generated from LatexMath.g4 by ANTLR 4.9.3
// jshint ignore: start
import antlr4 from 'antlr4';
import LatexMathListener from './LatexMathListener.js';
import LatexMathVisitor from './LatexMathVisitor.js';




const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class LatexMathParser extends antlr4.Parser {

    static grammarFileName = "LatexMath.g4";
    static literalNames = [ null, "'='", "'_'", "'^'", "'!'", "'('", "')'", 
                            "'\\left('", "'\\right)'", "'.'", "'{'", "'}'", 
                            "'['", "']'", "'+'", "'-'", "'*'", "'\\cdot'", 
                            "'/'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, "DIGIT", "OPERATORS", "BRACKETS", 
                             "LEFTPARENTHESIS", "RIGHTPARENTHESIS", "TEXFUNCTION", 
                             "TEXCOMMAND", "CHAR", "WHITESPACE" ];
    static ruleNames = [ "start", "equation", "expr", "functionExpression", 
                         "factorialExpression", "exponentialExpression", 
                         "signExpression", "multiplicativeExpression", "additiveExpression", 
                         "unit", "unitexpr", "number", "command", "id", 
                         "texOperand", "addop", "mulop" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = LatexMathParser.ruleNames;
        this.literalNames = LatexMathParser.literalNames;
        this.symbolicNames = LatexMathParser.symbolicNames;
    }

    get atn() {
        return atn;
    }



	start() {
	    let localctx = new StartContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, LatexMathParser.RULE_start);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 34;
	        this.equation();
	        this.state = 35;
	        this.match(LatexMathParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	equation() {
	    let localctx = new EquationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, LatexMathParser.RULE_equation);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 37;
	        localctx.l = this.expr();
	        this.state = 40;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===LatexMathParser.T__0) {
	            this.state = 38;
	            this.match(LatexMathParser.T__0);
	            this.state = 39;
	            localctx.r = this.expr();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expr() {
	    let localctx = new ExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, LatexMathParser.RULE_expr);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 42;
	        this.additiveExpression();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	functionExpression() {
	    let localctx = new FunctionExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, LatexMathParser.RULE_functionExpression);
	    var _la = 0; // Token type
	    try {
	        this.state = 65;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 44;
	            this.match(LatexMathParser.TEXFUNCTION);
	            this.state = 47;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===LatexMathParser.T__1) {
	                this.state = 45;
	                this.match(LatexMathParser.T__1);
	                this.state = 46;
	                localctx.sub = this.texOperand();
	            }

	            this.state = 51;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===LatexMathParser.T__2) {
	                this.state = 49;
	                this.match(LatexMathParser.T__2);
	                this.state = 50;
	                localctx.sup = this.texOperand();
	            }

	            this.state = 55;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 53;
	                this.unitexpr();
	                break;

	            case 2:
	                this.state = 54;
	                this.multiplicativeExpression();
	                break;

	            }
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 57;
	            this.id();
	            this.state = 60;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===LatexMathParser.T__2) {
	                this.state = 58;
	                this.match(LatexMathParser.T__2);
	                this.state = 59;
	                localctx.sup = this.texOperand();
	            }

	            this.state = 62;
	            this.unitexpr();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 64;
	            localctx.skip = this.unit();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	factorialExpression() {
	    let localctx = new FactorialExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, LatexMathParser.RULE_factorialExpression);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 67;
	        this.functionExpression();
	        this.state = 69;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
	        if(la_===1) {
	            this.state = 68;
	            localctx.f = this.match(LatexMathParser.T__3);

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	exponentialExpression() {
	    let localctx = new ExponentialExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, LatexMathParser.RULE_exponentialExpression);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 71;
	        this.factorialExpression();
	        this.state = 74;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
	        if(la_===1) {
	            this.state = 72;
	            this.match(LatexMathParser.T__2);
	            this.state = 73;
	            this.texOperand();

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	signExpression() {
	    let localctx = new SignExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, LatexMathParser.RULE_signExpression);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 79;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===LatexMathParser.T__13 || _la===LatexMathParser.T__14) {
	            this.state = 76;
	            localctx._addop = this.addop();
	            localctx.s.push(localctx._addop);
	            this.state = 81;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 82;
	        this.exponentialExpression();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	multiplicativeExpression() {
	    let localctx = new MultiplicativeExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, LatexMathParser.RULE_multiplicativeExpression);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 84;
	        this.signExpression();
	        this.state = 91;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,10,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 89;
	                this._errHandler.sync(this);
	                switch(this._input.LA(1)) {
	                case LatexMathParser.T__15:
	                case LatexMathParser.T__16:
	                case LatexMathParser.T__17:
	                    this.state = 85;
	                    this.mulop();
	                    this.state = 86;
	                    this.signExpression();
	                    break;
	                case LatexMathParser.T__4:
	                case LatexMathParser.T__6:
	                case LatexMathParser.T__8:
	                case LatexMathParser.DIGIT:
	                case LatexMathParser.TEXFUNCTION:
	                case LatexMathParser.TEXCOMMAND:
	                case LatexMathParser.CHAR:
	                    this.state = 88;
	                    this.exponentialExpression();
	                    break;
	                default:
	                    throw new antlr4.error.NoViableAltException(this);
	                } 
	            }
	            this.state = 93;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,10,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	additiveExpression() {
	    let localctx = new AdditiveExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, LatexMathParser.RULE_additiveExpression);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 94;
	        localctx._multiplicativeExpression = this.multiplicativeExpression();
	        localctx.e.push(localctx._multiplicativeExpression);
	        this.state = 100;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===LatexMathParser.T__13 || _la===LatexMathParser.T__14) {
	            this.state = 95;
	            localctx._addop = this.addop();
	            localctx.o.push(localctx._addop);
	            this.state = 96;
	            localctx._multiplicativeExpression = this.multiplicativeExpression();
	            localctx.e.push(localctx._multiplicativeExpression);
	            this.state = 102;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	unit() {
	    let localctx = new UnitContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, LatexMathParser.RULE_unit);
	    try {
	        this.state = 107;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,12,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 103;
	            this.id();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 104;
	            this.number();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 105;
	            this.command();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 106;
	            this.unitexpr();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	unitexpr() {
	    let localctx = new UnitexprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, LatexMathParser.RULE_unitexpr);
	    try {
	        this.state = 117;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case LatexMathParser.T__4:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 109;
	            this.match(LatexMathParser.T__4);
	            this.state = 110;
	            this.expr();
	            this.state = 111;
	            this.match(LatexMathParser.T__5);
	            break;
	        case LatexMathParser.T__6:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 113;
	            this.match(LatexMathParser.T__6);
	            this.state = 114;
	            this.expr();
	            this.state = 115;
	            this.match(LatexMathParser.T__7);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	number() {
	    let localctx = new NumberContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, LatexMathParser.RULE_number);
	    var _la = 0; // Token type
	    try {
	        this.state = 145;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,19,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 120; 
	            this._errHandler.sync(this);
	            var _alt = 1;
	            do {
	            	switch (_alt) {
	            	case 1:
	            		this.state = 119;
	            		this.match(LatexMathParser.DIGIT);
	            		break;
	            	default:
	            		throw new antlr4.error.NoViableAltException(this);
	            	}
	            	this.state = 122; 
	            	this._errHandler.sync(this);
	            	_alt = this._interp.adaptivePredict(this._input,14, this._ctx);
	            } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	            this.state = 131;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,16,this._ctx);
	            if(la_===1) {
	                this.state = 124;
	                this.match(LatexMathParser.T__8);
	                this.state = 128;
	                this._errHandler.sync(this);
	                var _alt = this._interp.adaptivePredict(this._input,15,this._ctx)
	                while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                    if(_alt===1) {
	                        this.state = 125;
	                        this.match(LatexMathParser.DIGIT); 
	                    }
	                    this.state = 130;
	                    this._errHandler.sync(this);
	                    _alt = this._interp.adaptivePredict(this._input,15,this._ctx);
	                }


	            }
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 136;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===LatexMathParser.DIGIT) {
	                this.state = 133;
	                this.match(LatexMathParser.DIGIT);
	                this.state = 138;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 139;
	            this.match(LatexMathParser.T__8);
	            this.state = 141; 
	            this._errHandler.sync(this);
	            var _alt = 1;
	            do {
	            	switch (_alt) {
	            	case 1:
	            		this.state = 140;
	            		this.match(LatexMathParser.DIGIT);
	            		break;
	            	default:
	            		throw new antlr4.error.NoViableAltException(this);
	            	}
	            	this.state = 143; 
	            	this._errHandler.sync(this);
	            	_alt = this._interp.adaptivePredict(this._input,18, this._ctx);
	            } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	command() {
	    let localctx = new CommandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, LatexMathParser.RULE_command);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 147;
	        this.match(LatexMathParser.TEXCOMMAND);
	        this.state = 156; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 156;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case LatexMathParser.T__9:
	                this.state = 148;
	                localctx.s10 = this.match(LatexMathParser.T__9);
	                localctx.b.push(localctx.s10);
	                this.state = 149;
	                this.expr();
	                this.state = 150;
	                this.match(LatexMathParser.T__10);
	                break;
	            case LatexMathParser.T__11:
	                this.state = 152;
	                localctx.s12 = this.match(LatexMathParser.T__11);
	                localctx.b.push(localctx.s12);
	                this.state = 153;
	                this.expr();
	                this.state = 154;
	                this.match(LatexMathParser.T__12);
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 158; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===LatexMathParser.T__9 || _la===LatexMathParser.T__11);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	id() {
	    let localctx = new IdContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, LatexMathParser.RULE_id);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 162;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case LatexMathParser.CHAR:
	            this.state = 160;
	            localctx.name = this.match(LatexMathParser.CHAR);
	            break;
	        case LatexMathParser.TEXCOMMAND:
	            this.state = 161;
	            localctx.name = this.match(LatexMathParser.TEXCOMMAND);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 166;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===LatexMathParser.T__1) {
	            this.state = 164;
	            this.match(LatexMathParser.T__1);
	            this.state = 165;
	            this.texOperand();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	texOperand() {
	    let localctx = new TexOperandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, LatexMathParser.RULE_texOperand);
	    try {
	        this.state = 174;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case LatexMathParser.CHAR:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 168;
	            this.match(LatexMathParser.CHAR);
	            break;
	        case LatexMathParser.DIGIT:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 169;
	            this.match(LatexMathParser.DIGIT);
	            break;
	        case LatexMathParser.T__9:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 170;
	            this.match(LatexMathParser.T__9);
	            this.state = 171;
	            this.equation();
	            this.state = 172;
	            this.match(LatexMathParser.T__10);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	addop() {
	    let localctx = new AddopContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, LatexMathParser.RULE_addop);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 176;
	        _la = this._input.LA(1);
	        if(!(_la===LatexMathParser.T__13 || _la===LatexMathParser.T__14)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	mulop() {
	    let localctx = new MulopContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, LatexMathParser.RULE_mulop);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 178;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << LatexMathParser.T__15) | (1 << LatexMathParser.T__16) | (1 << LatexMathParser.T__17))) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

LatexMathParser.EOF = antlr4.Token.EOF;
LatexMathParser.T__0 = 1;
LatexMathParser.T__1 = 2;
LatexMathParser.T__2 = 3;
LatexMathParser.T__3 = 4;
LatexMathParser.T__4 = 5;
LatexMathParser.T__5 = 6;
LatexMathParser.T__6 = 7;
LatexMathParser.T__7 = 8;
LatexMathParser.T__8 = 9;
LatexMathParser.T__9 = 10;
LatexMathParser.T__10 = 11;
LatexMathParser.T__11 = 12;
LatexMathParser.T__12 = 13;
LatexMathParser.T__13 = 14;
LatexMathParser.T__14 = 15;
LatexMathParser.T__15 = 16;
LatexMathParser.T__16 = 17;
LatexMathParser.T__17 = 18;
LatexMathParser.DIGIT = 19;
LatexMathParser.OPERATORS = 20;
LatexMathParser.BRACKETS = 21;
LatexMathParser.LEFTPARENTHESIS = 22;
LatexMathParser.RIGHTPARENTHESIS = 23;
LatexMathParser.TEXFUNCTION = 24;
LatexMathParser.TEXCOMMAND = 25;
LatexMathParser.CHAR = 26;
LatexMathParser.WHITESPACE = 27;

LatexMathParser.RULE_start = 0;
LatexMathParser.RULE_equation = 1;
LatexMathParser.RULE_expr = 2;
LatexMathParser.RULE_functionExpression = 3;
LatexMathParser.RULE_factorialExpression = 4;
LatexMathParser.RULE_exponentialExpression = 5;
LatexMathParser.RULE_signExpression = 6;
LatexMathParser.RULE_multiplicativeExpression = 7;
LatexMathParser.RULE_additiveExpression = 8;
LatexMathParser.RULE_unit = 9;
LatexMathParser.RULE_unitexpr = 10;
LatexMathParser.RULE_number = 11;
LatexMathParser.RULE_command = 12;
LatexMathParser.RULE_id = 13;
LatexMathParser.RULE_texOperand = 14;
LatexMathParser.RULE_addop = 15;
LatexMathParser.RULE_mulop = 16;

class StartContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = LatexMathParser.RULE_start;
    }

	equation() {
	    return this.getTypedRuleContext(EquationContext,0);
	};

	EOF() {
	    return this.getToken(LatexMathParser.EOF, 0);
	};

	enterRule(listener) {
	    if(listener instanceof LatexMathListener ) {
	        listener.enterStart(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof LatexMathListener ) {
	        listener.exitStart(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof LatexMathVisitor ) {
	        return visitor.visitStart(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class EquationContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = LatexMathParser.RULE_equation;
        this.l = null; // ExprContext
        this.r = null; // ExprContext
    }

	expr = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ExprContext);
	    } else {
	        return this.getTypedRuleContext(ExprContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof LatexMathListener ) {
	        listener.enterEquation(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof LatexMathListener ) {
	        listener.exitEquation(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof LatexMathVisitor ) {
	        return visitor.visitEquation(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ExprContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = LatexMathParser.RULE_expr;
    }

	additiveExpression() {
	    return this.getTypedRuleContext(AdditiveExpressionContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof LatexMathListener ) {
	        listener.enterExpr(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof LatexMathListener ) {
	        listener.exitExpr(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof LatexMathVisitor ) {
	        return visitor.visitExpr(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class FunctionExpressionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = LatexMathParser.RULE_functionExpression;
        this.sub = null; // TexOperandContext
        this.sup = null; // TexOperandContext
        this.skip = null; // UnitContext
    }

	TEXFUNCTION() {
	    return this.getToken(LatexMathParser.TEXFUNCTION, 0);
	};

	unitexpr() {
	    return this.getTypedRuleContext(UnitexprContext,0);
	};

	multiplicativeExpression() {
	    return this.getTypedRuleContext(MultiplicativeExpressionContext,0);
	};

	texOperand = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(TexOperandContext);
	    } else {
	        return this.getTypedRuleContext(TexOperandContext,i);
	    }
	};

	id() {
	    return this.getTypedRuleContext(IdContext,0);
	};

	unit() {
	    return this.getTypedRuleContext(UnitContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof LatexMathListener ) {
	        listener.enterFunctionExpression(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof LatexMathListener ) {
	        listener.exitFunctionExpression(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof LatexMathVisitor ) {
	        return visitor.visitFunctionExpression(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class FactorialExpressionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = LatexMathParser.RULE_factorialExpression;
        this.f = null; // Token
    }

	functionExpression() {
	    return this.getTypedRuleContext(FunctionExpressionContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof LatexMathListener ) {
	        listener.enterFactorialExpression(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof LatexMathListener ) {
	        listener.exitFactorialExpression(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof LatexMathVisitor ) {
	        return visitor.visitFactorialExpression(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ExponentialExpressionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = LatexMathParser.RULE_exponentialExpression;
    }

	factorialExpression() {
	    return this.getTypedRuleContext(FactorialExpressionContext,0);
	};

	texOperand() {
	    return this.getTypedRuleContext(TexOperandContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof LatexMathListener ) {
	        listener.enterExponentialExpression(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof LatexMathListener ) {
	        listener.exitExponentialExpression(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof LatexMathVisitor ) {
	        return visitor.visitExponentialExpression(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}
